--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
   <body>
     <header>
       <h1>Campo Minato</h1>
-      <button id="play">Play</button>
+      <div>
+        <label for="difficulty">Difficulty:</label>
+        <select id="difficulty">
+          <option value="1">Easy</option>
+          <option value="2">Medium</option>
+          <option value="3">Hard</option>
+        </select>
+        <button id="play">Play</button>
+      </div>
     </header>
     <main>
       <div id="grid"></div>
